add game link terraria

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                         <li>
                             <a target="_blank" href="https://www.twitch.tv/directory/game/Warframe"><img src="https://static-cdn.jtvnw.net/ttv-boxart/66170_IGDB-188x250.jpg" alt="imagem warframe"></a>
                         </li>
+                        
+                        </li>
+                            <a target="_blank" href="https://www.twitch.tv/directory/game/Terraria"><img src="https://static-cdn.jtvnw.net/ttv-boxart/31376_IGDB-144x192.jpg" alt="imagem terraria"></a>
+                        </li>
                     </ul>
 
                 </div>
