--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NLW eSports</title>
         <link rel="stylesheet" href="./styless.css">
+        <link rel="icon" type="image/x-icon" href="./assets/eu.jpeg">
+
     </head>
     <body>
         <header>
